# btrader

./: .gitignore  Cargo.toml
config/: sample_config.json
src/: calculation_cluster.rs  config.rs  depth_cache.rs  discord.rs  lib.rs  main.rs  telegram.rs  trader.rs
tests/: test_config.rs  test_triangular_relationship.rs
