[package]
name = "btrader"
version = "0.2.0"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
edition = "2021"
description = "Arbitrage trading bot for Binance"
homepage = "https://github.com/gabriel-milan/btrader"
repository = "https://github.com/gabriel-milan/btrader"
license="GPL-3.0"
keywords=["bot", "algotrading", "cryptocurrencies", "binance", "arbitrage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.18.2"
serde = { version = "1.0.136" }
serde_json = { version = "1.0.79" }
rayon = "1.5.1"
indicatif = "0.16.2"
console = "0.15.0"
futures="0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
serenity = "0.10.10"

[lib]
name = "btrader"
path = "src/lib.rs"